@@ -1,3 +1,8 @@
+2005-04-29  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/gcompris/interface.c: (create_gcompris_edit): removed the menu which uses an obsolete
+	way of doing and do not compile on new distro.
+
 2005-04-27  Bruno coudoin  <bruno.coudoin@free.fr>
 
 
